# my-demo

./: CMakeLists.txt  README.md  docker-compose.yml
cmake/: Deps.cmake
common/base/: app_result.h  request_context.h
common/errors/: error_code.h
config/: user_service.yaml
doc/: 技术栈说明.md  项目需求说明书.md  项目需求说明书V2.md
mysql/: 001_init.sql
proto/: user_service.proto
scripts/: smoke_user_service.sh
services/user_service/: CMakeLists.txt  Dockerfile
services/user_service/src/: main.cpp
services/user_service/src/cache/: user_cache.cpp  user_cache.h
services/user_service/src/handler/: user_rpc_handler.cpp  user_rpc_handler.h
services/user_service/src/infra/: config_loader.cpp  config_loader.h  config_types.h  logger.cpp  logger.h  mysql_client.cpp  mysql_client.h  mysql_headers.h  redis_client.cpp  redis_client.h  redis_headers.h
services/user_service/src/repository/: user_repository.cpp  user_repository.h
services/user_service/src/service/: user_domain_service.cpp  user_domain_service.h
tools/user_client/: CMakeLists.txt  main.cpp
